# dutch_rent

./: Makefile  README.md  pyproject.toml
.github/workflows/: workflow.yml
src/: runner.py
src/config/: .env  config.py
src/model/: model_service.py
src/model/pipeline/: collection.py  model.py  preparation.py
